HHH-8159 - Apply fixups indicated by analysis tools