@@ -127,10 +127,10 @@ public class EventCacheTest extends BaseCoreFunctionalTestCase {
         Map<Object,Object> input = new HashMap<Object,Object>();
         Object entity1 = new Simple( 1 );
 		//
-        Object copy1 = new Integer( 2 );
+        Object copy1 = Integer.valueOf( 2 );
         input.put(entity1, copy1); 
         Object entity2 = new Simple( 3 );
-        Object copy2 = new Integer( 2 );
+        Object copy2 = Integer.valueOf( 2 );
         input.put(entity2, copy2);
         cache.putAll(input);
 
